MyDemoOrg/force-app/main/default/objects/Case/fields/Days_Since_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Update__c</fullName>
    <description>This formula calculates the last activity date (On Account) difference with today date. This is created for learning purpose from trail head.</description>
    <formula>TODAY()  -   Account.LastActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Update</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>