MyDemoOrg/force-app/main/default/objects/Case/fields/Send_CSAT__c.field-meta.xml
<CustomField>
    <fullName>Send_CSAT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send CSAT</label>
    <type>Checkbox</type>
</CustomField>