MyDemoOrg/force-app/main/default/objects/Case/fields/Test_Salesforce_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Test_Salesforce_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Salesforce Checkbox</label>
    <type>Checkbox</type>
</CustomField>