MyDemoOrg/force-app/main/default/objects/Case/fields/WorkflowTrigDate__c.field-meta.xml
<CustomField>
    <fullName>WorkflowTrigDate__c</fullName>
    <label>WorkflowTrigDate</label>
    <type>DateTime</type>
</CustomField>