MyDemoOrg/force-app/main/default/objects/Case/validationRules/Change_Owner_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Change_Owner_check</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( OwnerId ) &amp;&amp;  Send_CSAT__c = TRUE</errorConditionFormula>
    <errorMessage>Validation is here, Hands up</errorMessage>
</ValidationRule>