MyDemoOrg/force-app/main/default/objects/Case/validationRules/Test.validationRule-meta.xml
<ValidationRule>
    <fullName>Test</fullName>
    <active>false</active>
    <errorConditionFormula>Contact.Phone  = &quot;&quot;</errorConditionFormula>
    <errorMessage>Contact phone is requied</errorMessage>
</ValidationRule>