MyDemoOrg/force-app/main/default/objects/Case/validationRules/TestValidationRuleOnCheckbox.validationRule-meta.xml
<ValidationRule>
    <fullName>TestValidationRuleOnCheckbox</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Send_CSAT__c = TRUE,Test_Salesforce_Checkbox__c = TRUE)</errorConditionFormula>
    <errorMessage>hahahaha IT WORKED !!!!!</errorMessage>
</ValidationRule>